<resources>
    <string name="app_name">Salé</string>
    <string name="nombre_de_la_receta">Nombre de la receta</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="duraci_n">Duración</string>
    <string name="modo_de_preparaci_n">Modo de preparación</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre">Nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manual_de_instrucciones">MANUAL DE INSTRUCCIONES</string>
    <string name="separador">-----------------------</string>
    <string name="a_adir_receta">Añadir receta</string>
    <string name="button">Button</string>
    <string name="url_imagen">URL imagen</string>
    <string name="url_de_la_imagen">Url de la imagen</string>
    <string name="eliminar">Eliminar</string>
    <string name="mas_opciones">Mas opciones</string>
    <string name="comenzar">Comenzar</string>
    <string name="cerrar">Cerrar</string>
    <string name="manual">Manual</string>
</resources>